Fix bleeding out of image in file previewer

--- a/app/assets/stylesheets/components/forms/_file_info.css.sass
+++ b/app/assets/stylesheets/components/forms/_file_info.css.sass
@@ -4,7 +4,7 @@
   .center
     text-align: center
   .vcenter
-    line-height: 250px
+    line-height: 248px
     p
       line-height: normal
       display: inline-block
@@ -28,6 +28,7 @@
     +border-radius(3px 3px 3px 3px)
     +box-shadow(0 1px 2px rgba(0,0,0,0.1) inset)
     text-align: center
+    overflow: hidden
     .icon
       font-size: 100px
       line-height: 250px
